# mango

./: .gitignore  ReadMe.md  readMe.md
peach/: CMakeLists.txt
peach/config/: cam0.yaml  euroc_mono.yaml
peach/include/: feature.h  orb.h  system.h
peach/src/: config_mgr.cpp  system.cpp
registration/include/mango/registration/: icp.h  registration.h
src/orange/: CMakeLists.txt  package.xml
src/orange/src/: Localization.cpp  Localization.h  Mapping.cpp  Mapping.h  Optimize.cpp  Optimize.h  System.cpp
src/orange/src/base/: Imu.hpp  LaserScan.hpp  Odometry.hpp  Pose.hpp
src/orange/src/common/: LaserScan.h  SensorAdapter.cpp  SensorAdapter.h
src/orange/src/localization/: Localization.cpp  Localization.h
src/peach/: CMakeLists.txt  ReadMe.md  mono.cpp
src/peach/config/: tum_rgbd.yaml
src/peach/include/: config_mgr.h  frame.h  initialize.h  orb.h
src/peach/src/: Config.hpp  Mapping.cpp  Mapping.h  Optimize.cpp  Optimize.h  System.cpp  Tracking.cpp  Tracking.h  Util.cpp  Util.h  frame.cpp
src/peach/src/base/: Imu.hpp  Odometry.hpp  Point.hpp  PointCloud.hpp  Pose.hpp
watermelon/: readMe.md
watermelon/localization/: localization_node.cpp
watermelon/registration/src/: icp.cpp
